feat: allow adding one-off list items
